--- a/index.html
+++ b/index.html
@@ -27,202 +27,61 @@
 </head>
 
 <body>
-
-    <header>
-        <div class="position-fixed w-100 header-container">
-            <div class="container d-flex justify-content-between align-items-center">
-                <div class="navbar-brand">
-                    <a class="logo" href="">
-                        <span>Ilumina con tu voz</span>
-                        <img  height="50" src="./assets/img/belen_nieves_logo.png" alt="Logo de Curso de oratoria: Ilumina con tu voz - Belén Nieves"></a>
-                </div>
-                <div class="navbar-collapse d-lg-flex d-xl-flex justify-content-end align-items-center">
-                    <ul class="navbar-nav d-inline-flex flex-row justify-content-between align-items-center">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#course">Intro</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#program">Programa</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#trainer">Capacitador</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#price">Costo</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#cta">Inscribite</a>
-                        </li>                       
-                                                                                                   
-                    </ul>
-                </div>
-                <label class="small-menu-container">
-                    <input type="checkbox" class="header-input h-100 position-absolute">
-                    <span class="menu position-absolute d-inline-block"> <span class="hamburger d-inline-block position-absolute"></span>
-                    </span>
-    
-                    <ul class="navbar-nav position-absolute text-center w-100">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#course">Intro</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#program">Programa</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#trainer">Capacitador</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#price">Costo</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#cta">Inscribite</a>
-                        </li>                                                 
-                    </ul>
-                </label>
-            </div>
-        </div>
-    </header>
-
     <section>
         <div class="hero" data-aos="fade-in" data-aos-duration="2000">
-            <img class="img-fluid" src="assets/img/belen_nieves_header.png" alt="¿Qué decir? ¿Cómo hablar? Aprendé el arte de la comunicación"/>
-            <div class="hero-text-container">
-                <div class="hero-text">
-                    <div class="container">
-                        <h1>Vence el Bloqueo</h1>
-                    </div>
-                </div>
-                <div class="hero-text">
-                    <div class="container">
-                        <p>al hablar</p>
-                    </div>
-                </div>
-                <div class="container">
-                    <p>¿Cómo Dios me ayuda a superar estas dificultades? ¿Cuál es el mensaje que debe comunicar mi voz? ¿Qué dice la Biblia al respecto?</p>
-                </div>
-            </div>            
-        </div>
-    </section>
-    <section>
-        <div id="course" class="course"  data-aos="fade-in" data-aos-duration="2000">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="video-container">
-                            <video playsinline controls poster="/assets/img/poster.png">
-                                <source src="/assets/video/video.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
-                        </div>                        
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="white-box">
-                            <img class="img-fluid" alt="Attention" src="assets/img/belen_nieves_atention_icon.png" />
-                            Lo mejor de todo, ¡las clases están pregrabadas! Así que podrás acceder a ellas en cualquier momento que te resulte conveniente.</p>                            
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <img class="img-fluid" alt="Modalidad virtual" src="/assets/img/belen_nieves_screen_icon.png" /> <span>Modalidad virtual/Clases pregrabadas</span>
-                            </div>
-                           <!-- <div class="col-lg-12">
-                                <img class="img-fluid" alt="Calendario" src="/assets/img/belen_nieves_calendar_icon.png" /> <span>Jueves 9, 16 y 23 de noviembre 20 h</span>
-                            </div>-->
-                            <div class="col-lg-12">
-                                <img class="img-fluid" alt="Duración de las clases" src="/assets/img/belen_nieves_duration_icon.png" /> <span>Tres encuentros de una hora</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div id="program" class="program"  data-aos="fade-in" data-aos-duration="2000">
-            <div class="container">                
-                <div class="row">
-                    <div class="col-lg-12">                        
-                        <div class="glass">
-                            <p class="heading">Programa</p>
-                            <p class="class">
-                                <span class="class-nr">Primer encuentro: Visión creativa.</span>
-                                <span class="class-details">Diferencia de crear con la palabra y crear en la palabra. ¿Qué rol tuvo la palabra en la creación? ¿Cuál es la palabra en tu vida que dará fruto?</span>
-                            </p>
-                            <p class="class">
-                                <span class="class-nr">Segundo encuentro: Visión comunicacional.</span>
-                                <span class="class-details">En este encuentro, encenderemos una luz de un cuarto muy especial para descubrir nuestros conocimientos y habilidades en la comunicación, exploraremos y reconoceremos aspectos de la oralidad.</span>
-                            </p>
-                            <p class="class">
-                                <span class="class-nr">Tercer encuentro: Visión de sanidad.</span>
-                                <span class="class-details">En el tercer encuentro, se abordarán temas relacionados con la sanidad emocional y espiritual, y cómo estos aspectos pueden influir en tu capacidad para comunicar mensajes de fe.</span>
-                            </p>                            
-                        </div>                        
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div id="trainer" class="trainer"  data-aos="fade-in" data-aos-duration="2000">
-            <div class="container">
-                <div class="col-lg-6">
-                    <p class="heading">Capacitador</p>
-                    <p class="trainer-details">
-                        Mi nombre es Belén. A lo largo de mi vida, he experimentado algunos episodios que parecían limitar mi capacidad de expresión. Sin embargo, con el tiempo, y gracias a Dios, he aprendido a verlos como oportunidades de crecimiento y fortaleza. 
-                    </p>
-                    <p class="trainer-details">
-                        Cada uno de nosotros posee un don único, una voz que merece ser escuchada y valorada (empezando por nosotros mismos).
-                    </p>
-                    <p class="trainer-details">
-                        Recorramos este camino juntos e ilumina con tu voz.
-                    </p>
-                    <p class="specs">
-                        Licenciada en Comunicación Social<br/>
-                        Locutora Nacional M. P. N° 11.179<br/>
-                        Prof. Universitaria en Comunicación Social
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div id="price" class="price"  data-aos="fade-in" data-aos-duration="2000">
-            <div class="container">
-                <p class="heading">Invertí en tu formación</p>
-                <p class="price-details">Valor:</p>
-                <p class="pricing">AR$ 12000 - USD$ 20</p>
-               <!--  <div class="row">
-                    <div class="col-lg-6 white">
-                        <div class="d-flex">
-                            <div class="promo-details">
-                                <p class="promo-heading">Promoción</p>
-                                <p class="bolder-details">
-                                    <span class="percentage">35%</span>
-                                    <span class="off">off</span><br/><span class="biggest"><span class="dollar">$</span>5850</span>
-                                </p>
-                            </div>
-                            <p  class="extra">Abonando<br/>en 1 pago antes<br/>del 15/07/23</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 blue">
-                        <div class="d-flex">
-                            <div  class="promo-details">
-                                <p class="promo-heading">Promoción</p>
-                                <p class="bolder-details">
-                                    <span class="percentage">10%</span>
-                                    <span class="off">off</span><br/><span class="biggest"><span class="dollar">$</span>8100</span>
-                                </p>
-                            </div>
-                            <p class="extra">Abonando<br/>en 3 pagos<br/>1° pago antes<br/>del 15/07/23</p>
-                        </div>
-                    </div>
-                </div>-->
-            </div>
+            <div class="hero-text-container container">
+                <p class="tag">Taller virtual</p>              
+                <h1>Rendí tu Examen Oral con Éxito</h1>
+                <p class="text-under">Completá tus datos, aboná la matrícula y preparate para llevar tus habilidades comunicativas al siguiente nivel.</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScvbBHN9b_bzsgDY6NtZUBgP5xwWeynIVU_ARxNO5yrdW5aCw/viewform?usp=sf_link" target="_blank">Inscribite</a>               
+            </div>                        
         </div>
     </section>    
     <section>
+        <div id="course" class="course">
+            <div class="row data">
+                <div class="col-lg-4">
+                    <div class="container">
+                        <p>Fecha Única:<br/>10/2/2024<br/>de 9 a 11 am.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 middle">
+                    <div class="container">
+                        <p>Modalidad:<br/>Taller online</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="container">
+                        <p>Costo:<br/>$5000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-5">
+                        <p class="intro-text">¡Potenciá tu voz y dominá el arte de la oratoria. El sábado 10 de febrero, sumergite en una jornada que te equipará con herramientas prácticas para triunfar en tus exámenes orales. Mejorá tu expresión verbal, controlá la ansiedad y perfeccioná tu capacidad de persuasión en un entorno virtual dinámico. ¡Preparate para el éxito oratorio en tan solo un día!</p>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="about-container">
+                            <div class="img-container">
+                                <img class="img-fluid" src="./assets/img/belen_nieves.jpeg" />
+                            </div> 
+                            <p class="speaker">Belén Nieves</p>              
+                            <p>Licenciada en Comunicación Social<br/>Locutora Nacional M. P. N° 11.179<br/>Prof. Universitaria en Comunicación Social
+                            </p>
+                            <a href="https://www.instagram.com/belu.nnieves/" target="_blank">@belu.nnieves</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-1"></div>
+                </div>
+            </div>
+        </div>
+    </section>  
+    <section>
         <div id="cta" class="cta"  data-aos="fade-in" data-aos-duration="2000">
             <div class="container">
-                <p class="cta-details">Completá tus datos, aboná los encuentros y preparate para desarrollar tu voz con Su mensaje.</p>
+                <p class="cta-details">Desarrollá tu habilidad de comunicación en una ventaja para el éxito académico.</p>
                 <div class="cta-container">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScvbBHN9b_bzsgDY6NtZUBgP5xwWeynIVU_ARxNO5yrdW5aCw/viewform?usp=sf_link" target="_blank" class="btn-link">Inscribite</a>
                 </div>
@@ -231,27 +90,20 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="contact"  data-aos="fade-in" data-aos-duration="2000">
-            <div class="container">
-                <p class="contact-details">
-                    ¿Tenés dudas o consultas acerca de los encuentros?<br/>¡Escribinos al WhatsApp y te responderemos en breve!
-                </p>
-                <div class="btn-container">
-                    <a href="https://api.whatsapp.com/send/?phone=5493516850679&amp;text&amp;type=phone_number&amp;app_absent=0" target="_blank" class="btn-link">¡Contactanos!</a>
-                </div>
-            </div>
-        </div>
-    </section>
     <footer>
         <div class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-8">
+                        <p class="contact-title">Contacto</p>
                         <a href="mailto:nbelen.nieves@gmail.com" target="_blank">nbelen.nieves@gmail.com</a>
-                    </div>
-                    <div class="col-lg-6">
                         <a target="_blank" href="https://api.whatsapp.com/send/?phone=5493516850679&amp;text&amp;type=phone_number&amp;app_absent=0">+54 9 351 6850679</a>
+                    </div>
+                    <div class="col-4">
+                        <div class="brand">
+                            <img src="./assets/img/belen_nieves_logo.png" class="img-fluid"/>
+                            <span>Palabra Directa</span>
+                        </div>
                     </div>
                 </div>
             </div>
