--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="Ilumina con tu voz">
+  <meta property="og:title" content="Palabra Directa">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
