--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="cta-container">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScvbBHN9b_bzsgDY6NtZUBgP5xwWeynIVU_ARxNO5yrdW5aCw/viewform?usp=sf_link" target="_blank" class="btn-link">Inscribite</a>
                 </div>
-                <p class="details"><span>Una vez registrado y abonados los encuentros</span>, se enviará un código para que puedas acceder a una plataforma educativa donde se subirán las clases y donde podrás dejar tus consultas, comentarios y apreciaciones.
+                <p class="details"><span>Luego de haberte registrado y abonado la matrícula </span>, recibirás un mensaje con el enlace al taller.
                 </p>
             </div>
         </div>
