--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="cta-container">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScvbBHN9b_bzsgDY6NtZUBgP5xwWeynIVU_ARxNO5yrdW5aCw/viewform?usp=sf_link" target="_blank" class="btn-link">Inscribite</a>
                 </div>
-                <p class="details"><span>Luego de haberte registrado y abonado la matrícula </span>, recibirás un mensaje con el enlace al taller.
+                <p class="details">Luego de haberte registrado y abonado la matrícula, recibirás un mensaje con el enlace al taller.
                 </p>
             </div>
         </div>
