--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
                     <div class="col-4">
                         <div class="brand">
                             <img src="./assets/img/belen_nieves_logo.png" class="img-fluid"/>
-                            <span>Palabra Directa</span>
+                            <span>Ilumina con tu voz</span>
+                        </div>
+                      <div class="brand">
+                            <img src="./assets/img/logo2.svg" class="img-fluid"/>
                         </div>
                     </div>
                 </div>
