--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container" data-aos="fade-in" data-aos-duration="2000">
                 <div class="row">
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5">
